--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-redux": "^7.1.24",
+    "core-js": "^3.25.5",
     "exceljs": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.12/xlsx-0.18.12.tgz"
+    "react-redux": "^8.0.4",
+    "regenerator-runtime": "^0.13.9",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^1.4.1",
     "@types/exceljs": "^1.3.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/regenerator-runtime": "^0.13.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
@@ -33,6 +38,7 @@
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^4.0.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vite-plugin-eslint": "^1.8.1"
