--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@reduxjs/toolkit": "^1.8.6",
     "@types/react-redux": "^7.1.24",
     "core-js": "^3.25.5",
-    "exceljs": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -21,6 +20,7 @@
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.12/xlsx-0.18.12.tgz"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx-source": "^7.18.6",
     "@nabla/vite-plugin-eslint": "^1.4.1",
     "@types/exceljs": "^1.3.0",
     "@types/react": "^18.0.17",
@@ -42,6 +42,7 @@
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
+    "vite-plugin-babel": "^1.1.2",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
