--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "regenerator-runtime": "^0.13.9",
@@ -33,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-auto": "^0.7.3",
