--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.24",
     "core-js": "^3.25.5",
     "firebase": "^9.12.1",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
