--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.8.6",
     "@types/react-redux": "^7.1.24",
     "core-js": "^3.25.5",
+    "daisyui": "^2.33.0",
     "firebase": "^9.12.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
@@ -35,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "autoprefixer": "^10.4.12",
     "dotenv": "^16.0.3",
     "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -45,7 +47,9 @@
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^4.0.0",
+    "postcss": "^8.4.18",
     "redux-devtools-extension": "^2.13.9",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vite-plugin-babel": "^1.1.2",
